fix login page alignments

--- a/src/stylesheets/utility.css
+++ b/src/stylesheets/utility.css
@@ -797,3 +797,15 @@ gap: 200px;
 textarea {
   margin-top: 0;
 }
+
+.loginpage { 
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  /* justify-content: space-between; */
+}
+
+.grey-color { 
+  background-color: var(--grey-color);
+  color: var(--white-color);
+}
